[project]
name = "hass-tnse"
version = "2.0.0"
description = "TNS-Energo custom integration for Home Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = [
    "electricity",
    "energy",
    "home-assistant",
    "tns-energo",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Typing :: Typed",
]

[[project.authors]]
name = "LizardSystems"

[project.urls]
Repository = "https://github.com/lizardsystems/hass-tnse"
Documentation = "https://github.com/lizardsystems/hass-tnse"
"Bug Tracker" = "https://github.com/lizardsystems/hass-tnse/issues"
Changelog = "https://github.com/lizardsystems/hass-tnse/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "aiotnse==2.0.3",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
